--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./assets/video.png">
   <link rel="stylesheet" href="index.css">
   <title>Youtube</title>
 </head>
 
 <body>
   <div id="root"></div>
+  <script type="module" src="./src/App.js"></script>
 </body>
 
 </html>
