--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./assets/video.png">
+  <link rel="icon" href="./src/assets/favicon.png">
   <link rel="stylesheet" href="index.css">
   <title>Youtube</title>
 </head>
